# nexus_4wd_mecanum_simulator

./: README.md  Test_1_SAR.ino  test_SAR_integration.ino
nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
nexus_4wd_mecanum_description/urdf/: nexus_4wd_mecanum_lidar.gazebo  nexus_4wd_mecanum_lidar.xacro
nexus_4wd_mecanum_gazebo/: CMakeLists.txt  CMakeLists.txt.old  package.xml  plotting.rviz  setup.py
nexus_4wd_mecanum_gazebo/launch/: SLAM_gmapping.launch  amcl.launch  base_local_planner_params.yaml  costmap_common_params.yaml  explore_environment.launch  global_costmap_params.yaml  init_nodes.launch  local_costmap_params.yaml  locomove_base.launch  move_base_launch.launch  nexus_4wd_mecanum_house_world.launch  nexus_4wd_mecanum_world.launch  utils.launch
nexus_4wd_mecanum_gazebo/src/: cameraRead.py  commArduino.py  doOdometry.py  i2cBridge.py  test_accel.py  test_imu.py  tf_broadcaster.py
